NIFI-10831 enable JWT realm authentication with Elasticsearch